// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changelog generation writeChangelog generates correct changelog 1`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- comment 2 (test@testtestme.com)
- comment 1 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates correct changelog 2`] = `
Object {
  "entries": Array [
    Object {
      "comments": Object {
        "patch": Array [
          Object {
            "author": "test@testtestme.com",
            "comment": "comment 2",
            "commit": "(sha1)",
            "package": "foo",
          },
          Object {
            "author": "test@testtestme.com",
            "comment": "comment 1",
            "commit": "(sha1)",
            "package": "foo",
          },
        ],
      },
      "date": "(date)",
      "tag": "foo_v1.0.0",
      "version": "1.0.0",
    },
  ],
  "name": "foo",
}
`;

exports[`changelog generation writeChangelog generates correct grouped changelog 1`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- comment 1 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates correct grouped changelog 2`] = `
"# Change Log - bar

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment 3 (test@testtestme.com)
- comment 2 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates correct grouped changelog 3`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- \`bar\`
  - comment 3 (test@testtestme.com)
  - comment 2 (test@testtestme.com)
- \`foo\`
  - comment 1 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates correct grouped changelog when grouped change log is saved to the same dir as a regular changelog 1`] = `
"# Change Log - bar

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.3.4

(date)

### Patches

- comment 2 (test@testtestme.com)
"
`;

exports[`changelog generation writeChangelog generates correct grouped changelog when grouped change log is saved to the same dir as a regular changelog 2`] = `
"# Change Log - foo

This log was last generated on (date) and should not be manually modified.

<!-- Start content -->

## 1.0.0

(date)

### Patches

- \`bar\`
  - comment 2 (test@testtestme.com)
- \`foo\`
  - comment 1 (test@testtestme.com)
"
`;
